# comfyui-Lora-auto-downloader

./: Json_Lora_loader.py  README.md  __init__.py  cai_download.py  pyproject.toml
example/: example.json
nodes/: Json_Lora_loader.py  cai_download.py
nodes/json_lora_loader/: log.py
nodes/utils/: power_prompt_utils.py
